# armor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.toml  env.sh  main.cpp
Model/: happyModel.pb
daemon/: README.md  daemon.py  daemonctl.py  setup_daemon.sh  show_curve.py  supervisord.conf
data/: MindVision.Config  README.md  camAuto.xml  camera6mm.xml  camera8mm.xml  rf.xml
doc/: README.md  solvepnp.md
doc/sort/: README.md  doc.md
include/: config.hpp  crc_table.hpp  debug.h  imageshow.hpp  semaphore.hpp  toml.h  video.hpp
include/sort/: sort.h
include/usbio/: usbio.hpp  utility.hpp
include/usbio/include/: usbio.hpp  utility.hpp
include/usbio/src/: usbio.cpp  utility.cpp
info/: arch2.json  dumpe2.nnet  weights2.h5
source/: ArmorFinder.hpp  DebugSocket.hpp  RoundQueue.h  TfClassifier.hpp  ThreadPool.h  antitop.hpp  attack.hpp  base.hpp  capture.hpp  communicator.hpp  ddsolver.hpp  kalman.hpp  layers.hpp  pid.hpp  target.hpp  tools.hpp
source/capture/: base_capture.hpp  capture.hpp  dahua.hpp  dahua_capture.hpp  laji_capture.hpp  mind_capture.hpp
source/usbio/: usbio.cpp  utility.cpp
source/windmill/: .Windmill.hpp.swp  Target.hpp  Tool.hpp  Windmill.hpp  Windmill.hpp.bk0802  Windmill_org.hpp
tools/: README.md  camera.cpp  client.py  communicator.cpp  frames_receiving_client.py  image_receiving_client.py  image_sending_server.py  pack.py  solveK1.py  train.cpp
tools/Camera/Data/: 049010410183.mvdat  049060610008.mvdat
tools/armor_finder/: OldArmorFinder.py
tools/calib3d/: build.sh  default.xml  image_list.yaml
tools/remote_testing_tool/: image_sending_server.py  server_glue.py
tools/remote_testing_tool/cpp_img_sender/: CMakeLists.txt  main.cpp
tools/remote_testing_tool/cpp_img_sender/.cache/clangd/index/: main.cpp.B91DD2FEAD88D532.idx
